# machine-learning

./: Rag  Untitled2.ipynb  pandas, numpy, matplotlib, seaborn
30_days_project/: readme.md  requirements.txt
30_days_project/riset/: day_1.ipynb
base_line/: corelation.ipynb  covariance.ipynb  outie.detection.ipynb  readme.md  standar_deviation_and_variance.ipynb
base_line/projects/: ai_human.detection.ipynb  credit_risk_predictions.ipynb  ecoomerce.ranking.ipynb  restaurant_rating_predictions.ipynb  student_dropout_predictions.ipynb
deep_learning/: 01.intro.ipynb  readme.md
deep_learning/ 00_CORE_DEEP_LEARNING/: readme.md
deep_learning/00_CORE_DEEP_LEARNING/: readme.md
projects/: Credit-fraud.ipynb  ecoGrennly.ipynb  smart_intelegency.ipynb
pytorch/: 00_pytorch_fundamentals.ipynb  basic.ipynb
scikit-learn/: logistic_regression.ipynb
scikit-learn -machine-learning/: linear_regression.ipynb
scikit-learn/clustering/: gmm.ipynb  (+1 more)
scratch/: README.md
scratch-machine-learning/: linear_regression.ipynb  linear_regression_regulazation.ipynb
statistic/: Central_Tendency_Measures.ipynb  Dispersion_Measures.ipynb  joint_pdf.ipynb  random_variable_distribution.ipynb
task/: main.py  playground.ipynb  pyproject.toml  synthetic_test_data.csv  task1.ipynb  task_2.prak.ipynb
task/model/: xgb_churn_model.pkl  xgb_churn_threshold.pkl
task/task_python/: main.py  pyproject.toml
task/tasks/: task1.ipynb  task_2.ml_teo.ipynb  task_3.prak.ipynb  task_4.ipynb  task_5.ipynb  task_7.ipynb  task_8.ipynb
tools/: pandas-numpy-matplotlib-and-seaborn.ipynb
(+20 files in other folders)
